Worked on fixing projects page hardware projects layout and fixing porject clipping when flipping

--- a/src/styles/projects.css
+++ b/src/styles/projects.css
@@ -96,7 +96,13 @@ main,
   border-radius: 30px;
   height: 350px;
   width: 350px;
-  overflow: hidden;
+}
+
+.outside-container {
+  position: relative;
+  border-radius: 30px;
+  height: 400px;
+  width: 400px;
 }
 
 .front {
